--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   </head>
   <body style="margin: 0px; overflow: hidden">
     <a-scene embedded arjs="sourceType: webcam;">
-      <a-box position="0 0.5 0" material="opacity: 0.5;"></a-box>
+      <a-sphere position="0 0 0" radius="0.5" material="color:blue;"></a-box>
+      <a-text text="value:Hello World" color="blue"></a-text> 
       <a-marker-camera preset="hiro"></a-marker-camera>
     </a-scene>
   </body>
